Handful of fixes from review
Bg colour of cards, fixing footer section

Fixing misaligned sections. Darkening background of HTML

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-    color: #fefefe;
+    color:rgb(0, 0, 0);
     font-family: "Noto Sans", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
     font-weight: 400;
     scroll-padding-top: 6.5rem;
